# sterm

./: .gitignore  Cargo.toml  RUN-QUEUE.md  WORKS-MATRIX.md  biome.json  index.html  overlay-fs-spec.md  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
public/: friscy.js  friscy.wasm  jit_manager.js  rv2wasm_jit.js  rv2wasm_jit_bg.wasm  service-worker.js  worker.js
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-rust/: lib.rs
src/engine/: harness.ts  reader.ts  setup.ts  store.ts  wasm.worker.ts
src/ui/hooks/: useTerminal.ts
