[package]
name = "friscy-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Essential for JS/Rust interop
wasm-bindgen = "0.2.95"
# Serializing JIT stats and machine state
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Zero-copy logging
console_error_panic_hook = "0.1.7"

[profile.release]
# Elite optimization: prioritize binary size and speed
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
# Remove debug symbols to keep the 2GB runtime footprint focused on execution
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-bulk-memory", "--enable-threads"]
